--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -10,4 +10,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - run: swift test --enable-test-discovery --enable-code-coverage
-    - uses: mattpolzin/swift-codecov-action@0.2.0
+    - uses: mattpolzin/swift-codecov-action@master
+      with:
+        MINIMUM_COVERAGE: 90
