--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -10,6 +10,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - run: swift test --enable-test-discovery --enable-code-coverage
-    - uses: mattpolzin/swift-codecov-action@master
+    - uses: mattpolzin/swift-codecov-action@0.3.0
       with:
-        MINIMUM_COVERAGE: 90
+        MINIMUM_COVERAGE: 80
